Killed bug in DC, removed setChooser in IOC
Edited comments in PDFH, improved upon writeSingleFile in IOH to kill
bug